test/features/errors/semantic/e1025_duplicate_method.spl
# E1025: Duplicate Method

Feature: E1025 - Duplicate Method in Impl Block
  As a Simple compiler
  I want to detect duplicate method definitions in impl blocks
  So that each method is defined only once

  Background:
    Given I have the Simple compiler

  Scenario: Duplicate method in same impl
    When I compile:
      '''
      struct Counter:
        count: i32

      impl Counter:
        fn increment():
          self.count += 1

        fn increment():  # Error: duplicate method
          self.count += 2
      '''
    Then I should see error E1025 at line 8
    And the error message should be "duplicate method `{name}` in impl block"
    And the label should indicate "duplicate method definition"
    And the note should say "method `{name}` is already defined in this impl"
    And the help should suggest "remove or rename one of the duplicate methods"

  Scenario: Methods with different signatures still duplicate
    When I compile:
      '''
      struct Data:
        value: i32

      impl Data:
        fn process() -> i32:
          self.value

        fn process(x: i32) -> i32:  # Error: no overloading
          self.value + x
      '''
    Then I should see error E1025 at line 8

  Scenario: Same method name in different impls is OK
    When I compile:
      '''
      struct Counter:
        count: i32

      impl Counter:
        fn reset():
          self.count = 0

      trait Resettable:
        fn reset()

      impl Resettable for Counter:
        fn reset():  # OK: different impl block
          self.count = 0
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      struct Counter:
        count: i32

      impl Counter:
        fn inc():
          self.count += 1
        fn inc():
          self.count += 2
      '''
    Then I should see error E1025
    And the error message should contain "중복 메서드"
